# B2_Command_Line_Tool

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.template  LICENSE  MANIFEST.in  Makefile  README.md  README.release.md  appveyor.yml  b2  b2.spec  b2.spec.template  noxfile.py  pre-commit.sh  pyproject.toml  requirements-doc.txt  requirements-full.txt  requirements-license.txt  requirements-setup.txt  requirements-test.txt  requirements.txt  run-unit-tests.sh  setup.cfg  setup.py  test_b2_command_line.py  test_b2_command_line.py.bak
.github/: dependabot.yml  no-response.yml
.github/workflows/: cd.yml  ci.yml  push_docker.yml
b2/: __init__.py  __main__.py  _filesystem.py  _sdk_deprecation.py  account_info.py  api.py  arg_parser.py  arg_parser_types.py  autocomplete_cache.py  b2.py  b2http.py  bounded_queue_executor.py  bucket.py  cache.py  cli_api.py  cli_bucket.py  console_tool.py  download_dest.py  encryption.py  exception.py  file_version.py  import_hooks.py  json_encoder.py  parse_args.py  part.py  progress.py  proxy_importer.py  raw_api.py  raw_simulator.py  raw_simulator.py.bak  session.py  stub_account_info.py  sync.py  sync_report.py  thread_pool.py  transferer.py  unfinished_large_file.py  upload_source.py  upload_url_pool.py  utils.py  (+1 more)
b2/_cli/: __init__.py  arg_parser_types.py  argcompleters.py  autocomplete_cache.py  autocomplete_install.py  b2api.py  b2args.py  const.py  obj_loads.py  shell.py
b2/_internal/: __init__.py  arg_parser.py  console_tool.py  json_encoder.py  version.py  version_listing.py
b2/_internal/_b2v4/: __init__.py  __main__.py  registry.py
b2/_internal/_cli/: __init__.py  arg_parser_types.py  argcompleters.py  autocomplete_cache.py  autocomplete_install.py  b2api.py  b2args.py  const.py  obj_dumps.py  obj_loads.py  shell.py
b2/_internal/_utils/: __init__.py  python_compat.py  uri.py  uriparse.py
b2/_internal/b2v3/: __init__.py  __main__.py  registry.py  rm.py  sync.py
b2/_internal/b2v4/: __init__.py  __main__.py  registry.py
b2/_utils/: __init__.py  filesystem.py  python_compat.py  uri.py
b2/account_info/: __init__.py  abstract.py  allowed_policy.py  exception.py  in_memory.py  sqlite_account_info.py  stub.py  test_upload_url_concurrency.py  upload_url_pool.py
b2/sync/: .sync.py.swo  __init__.py  action.py  exception.py  file.py  filters.py  folder.py  folder_parser.py  policy.py  policy_manager.py  report.py  scan_policies.py  sync.py  sync.py.bak  utils.py
b2/transferer/: __init__.py  abstract.py  file_metadata.py  parallel.py  range.py  simple.py  transferer.py
changelog.d/: +48cc3755.removed.md  +9092be80.added.md  +add_file_server_side_copy.added.md  +add_header_options.added.md  +apiver-v4.changed.md  +apiver_for_cli.added.md  +authorize-account-output.added.md  +autocomplete_tests.infrastructure.md  +autocomplete_tests_errors.infrastructure.md  +b2_file_hide.added.md  +b2_file_hide.changed.md  +b2_file_unhide.added.md  +b2_path_in_help.fixed.md  +b2_uri_cmds.added.md  +b2_uri_cmds.deprecated.md  +b2sdk.fixed.md  +b2sdk_testing.infrastructure.md  +b2sdk_v3.changed.md  +b2uri-special-characters.fixed.md  +bump-gh-action-pypi.infrastructure.md  +cat.doc.md  +cd_dockerhub_desc.infrastructure.md  +cd_for_prerelease.infrastructure.md  +checking-changelog-entries.infrastructure.md  +ci_workflow_id.fixed.md  +command-account.added.md  +command-account.deprecated.md  +command-bucket.added.md  +command-bucket.deprecated.md  +command-delete-file-version.deprecated.md  +command-file-large.added.md  +command-file-large.deprecated.md  +command-file.added.md  +command-file.deprecated.md  +command-get-download-url-with-auth.deprecated.md  +command-key.added.md  +command-key.deprecated.md  +command-replication.added.md  +command-replication.deprecated.md  +console_tool_tests_v1_to_v3.infrastructure.md  (+118 more)
ci/: license_strategy.ini
ci/appveyor/: install.ps1
contrib/: b2  color-b2-logs.sh  debug_logs.ini
contrib/bash_completion/: b2
doc/: Makefile  bash_completion.md  encryption.md
doc/source/: b2.account_info.rst  b2.rst  b2.sync.rst  cli_arguments.rst  commands.rst  conf.py  index.rst  make_friendly_url_command.rst  modules.rst  quick_start.rst  replication.rst  sync_command.rst
doc/source/subcommands/: authorize_account.rst  cancel_all_unfinished_large_files.rst  cancel_large_file.rst  cat.rst  clear_account.rst  copy_file_by_id.rst  create_bucket.rst  create_key.rst  delete_bucket.rst  delete_file_version.rst  delete_key.rst  download_file.rst  download_file_by_id.rst  download_file_by_name.rst  file_info.rst  get_account_info.rst  get_bucket.rst  get_download_auth.rst  get_download_url_with_auth.rst  get_file_info.rst  get_url.rst  hide_file.rst  install_autocomplete.rst  list_buckets.rst  list_file_names.rst  list_file_versions.rst  list_keys.rst  list_parts.rst  ls.rst  make_url.rst  (+10 more)
docker/: Dockerfile.template  entrypoint.sh
pyinstaller-hooks/: hook-b2.py  hook-prettytable.py
test/: __init__.py  conftest.py  helpers.py  stub_account_info.py  test_account_info.py  test_account_info.py.bak  test_allowed_policy.py  test_api.py  test_arg_parse.py  test_b2http.py  test_base.py  test_bounded_queue_executor.py  test_bucket.py  test_bucket.py.bak  test_console_tool.py  test_console_tool.py.bak  test_download_dest.py  test_encryption.py  test_exception.py  test_exception.py.bak  test_import_hooks.py  test_parse_args.py  test_policy.py  test_progress.py  test_proxy_importer.py  test_raw_api.py  test_scan_policies.py  test_sdk_interface.py  test_session.py  test_sync.py  test_sync_report.py  test_thread_pool.py  test_utils.py
test/fixtures/: __init__.py
test/integration/: __init__.py  cleanup_buckets.py  conftest.py  helpers.py  persistent_bucket.py  test_autocomplete.py  test_b2_command_line.py  test_help.py  test_tqdm_closer.py
test/static/: __init__.py  test_licenses.py
test/unit/: __init__.py  conftest.py  helpers.py  test_apiver.py  test_arg_parser.py  test_autocomplete.py  test_base.py  test_console_tool.py  test_copy.py  test_filesystem.py  test_represent_file_metadata.py
(+55 files in other folders)
