[project]
requires-python = ">=3.7"
name = "b2"
dynamic = ["version", 'dependencies', 'optional-dependencies']
description = "Command Line Tool for Backblaze B2"
keywords = ["backblaze b2 cloud storage"]
readme = "README.md"
authors = [
    { name = "Backblaze, Inc.", email = "support@backblaze.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
license = { text = "MIT" }


[tools.setuptools.dynamic.dependecies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
doc = { file = ["requirements-doc.txt"] }
full = { file = ["requirements-full.txt"] }
license = { file = ["requirements-license.txt"] }

[project.urls]
Homepage = "https://github.com/Backblaze/B2_Command_Line_Tool"

[project.scripts]
b2 = "b2.console_tool:main"

[tool.ruff]
target-version = "py37"  # to be replaced by project:requires-python when we will have that section in here

# TODO add D
select = ["E", "F", "I", "UP"]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102", "D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test/**" = ["D", "F403", "F405"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/Backblaze/B2_Command_Line_Tool/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/Backblaze/B2_Command_Line_Tool/issues/{issue})"

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Doc"
showcontent = true

[[tool.towncrier.type]]
directory = "infrastructure"
name = "Infrastructure"
showcontent = true
